nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: nginx-test
spec:
  selector:
    app: nginx-test
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
